# platform-jwplc

./: README.md
.github/workflows/: ci-jwplc-logic-runtime.yml  release-jwplc-package.yml
JWPLC/: hash_size_jwplc.bat  mklink_Github_Arduino.txt  package_jwplc_index.json  package_jwplc_index_dev.json  package_jwplc_index_old.json
JWPLC/2.1.0/: installed.json  platform.txt
JWPLC/JWPLC-1.0.0/: installed.json  platform.txt
JWPLC/JWPLC-1.0.1/: installed.json  package.json  platform.txt
JWPLC/JWPLC-1.0.2/: installed.json  package.json  platform.txt
JWPLC/JWPLC-1.0.3/: installed.json  package.json  platform.txt
JWPLC/JWPLC-1.0.4/: installed.json  platform.txt
JWPLC/JWPLC-2.0.0/: boards.txt  installed.json  platform.txt
JWPLC/JWPLC-2.0.0-alpha1/: boards.txt  platform.txt
JWPLC/JWPLC_1.0.0/: boards.txt  package.json
JWPLC/tools/: README_RELEASE_AUTOMATION.md  jwplc_release.py
JWPLC_Basic/: boards.txt  package_jwplcbasic_index.json
JWPLC_Basic/JWPLC_Basic-1.0/: installed.json  platform.txt
JWPLC_Basic/JWPLC_Basic-1.0.4/: boards.txt  installed.json  package.json  platform.txt
JWPLC_Basic/JWPLC_Basic-1.0.4/cores/jwcontrol/plc-peripherals/: .gitignore  CMakeLists.txt  Makefile  README.md
JWPLC_Basic/JWPLC_Basic-1.0.4/cores/jwcontrol/plc-peripherals/include/: detect-platform.h  expanded-gpio.h  peripheral-tca6424a.h  plc-peripherals.h
JWPLC_Basic/JWPLC_Basic-1.0.4/cores/jwcontrol/plc-peripherals/src/: expanded-gpio.c
JWPLC_Basic/JWPLC_Basic-1.0.4/cores/jwcontrol/plc-peripherals/tests/: Makefile  test-i2c-interface.c  test-peripheral-ltc2309.c  test-peripheral-mcp23008.c  test-peripheral-pca9685.c
docs/: ALPHA27_FINAL_POLISH_CHECKLIST.md  ALPHA28_RS485_MODBUS_RTU_PLAN.md  ALPHA30_BUILD_SPEED_CACHE.md  ALPHA30_TIMING_TABLE.md  ALPHA30_TIMING_TABLE_STEP2.md  Comandos_SHA256_Size.txt  PORTING_MAP_2.0.0.md  alpha30-build-speed-cache.md  alpha31-clean-validation-results.md  alpha31-release-readiness-review.md  alpha31-to-beta1-handoff.md  alpha31-validation-checklist.md  beta1-readme-links-review.md  jw-libraries-snapshot.md  openplc-fork-jwplc-edition-plan.md
docs/v2.1.0-alpha.1/: openplc-io-map.md  (+2 more)
installers/: README.md
(+585 files in other folders)
